third stage completed
